--- a/Custom VtR-2E.css
+++ b/Custom VtR-2E.css
@@ -59,6 +59,7 @@ input.sheet-settingssheet:checked ~ div.sheet-skills,
 input.sheet-settingssheet:checked ~ div.sheet-othertraits,
 input.sheet-settingssheet:checked ~ div.sheet-expandedsheet,
 input.sheet-settingssheet:checked ~ div.sheet-expandedsheet2,
+input.sheet-settingssheet:checked ~ div.sheet-expandedsheet3,
 input.sheet-1st:checked ~ div * .sheet-2nd,
 input.sheet-2nd:checked ~ div * .sheet-1st,
 input.sheet-pages:checked ~ .sheet-gametype,
@@ -463,6 +464,15 @@ input.sheet-mummysheet:checked ~ div * input.sheet-weapon:checked + span + .shee
 
 .sheet-skills td {
 	line-height: 1em;   
+}
+
+.sheet-expandedHeader {
+	font-size: 1.7em;
+	font-weight: bolder;
+	font-family: "Courier";
+	color: #000000;
+	text-decoration: overline underline;   
+	text-align: center;
 }
 
 .sheet-subheader {
@@ -1171,11 +1181,12 @@ input[type=number] {
 	background: none;
 	color: black;
 	font-family: "Courier";
+	font-size: 10pt;
 	text-align: center;
 	border: none;
 	cursor: default;
 	box-shadow: none;
-	height: 16px;  
+	height: 12px;  
 }
 
 .sheet-settings input[type=number] {
@@ -1206,26 +1217,90 @@ input[type=number] {
 .sheet-rowtext {
 	text-align: center;
 	vertical-align: top;
+
 }
 
-.sheet-humanitytext {
-	text-align: center;
-	vertical-align: top;
+.sheet-humanitynumber,
+.sheet-humanitytext,
+.sheet-humanitydot {
+	font-family: "Courier";
+	font-style: bold;
+	font-weight: bolder;
+	font-size: 16px;
+	text-align: right;
+	vertical-align: bottom;
+	padding: 0.1px;
 }
 
 .sheet-humanitytext input[type=text] {
 	padding: 0.1px;
-	height: 12px;
+	width: 95%;
+	text-align: left;
+	height: 14px;
 }
 
-.sheet-rowtext input[type=text] {
+.sheet-rowtext input[type="text"] {
 	padding: 0.1px;
 	height: 14px;
+	width: 95%;
+}
+
+.sheet-borderA1 {
+	border: 5px double red;
+}
+
+.sheet-borderA2 {
+	border: 4px solid red;
+}
+
+.sheet-borderA3 {
+	border: 4px dashed red;
+}
+
+.sheet-borderA4 {
+	border: 4px dotted red;
+}
+
+.sheet-borderB1 {
+	border: 3px double blue;
+}
+
+.sheet-borderB2 {
+	border: 2px solid blue;
+}
+
+.sheet-borderB3 {
+	border: 2px dashed blue;
+}
+
+.sheet-borderB4 {
+	border: 2px dotted blue;
+}
+
+.sheet-borderC1 {
+	border: 1px double green;
+}
+
+.sheet-borderC2 {
+	border: 1px solid green;
+}
+
+.sheet-borderC3 {
+	border: 1px dashed green;
+}
+
+.sheet-borderC4 {
+	border: 1px dotted green;
+}
+
+.sheet-forcerowheight {
+	height: 20px;
 }
 
 .sheet-merittable {
 	margin-right: 15px;  
 	margin-left: 15px;
+	vertical-align: top;
 }
 
 .sheet-merittable input[type=text] {
@@ -1354,8 +1429,23 @@ input[type=number] {
 .sheet-expandedsheet3 textarea {
 	resize:vertical;
 	width: calc(100% - 10px);
-	margin-top: 10px;
+	margin-top: 0px;
 	height: 74px;
+}
+
+.sheet-largeTextArea textarea {
+	resize:vertical;
+	width: calc(100% - 10px);
+	margin-top: 0px;
+	height: 148px;
+}
+
+.sheet-vinculum table {
+	height:74px;
+}
+
+.sheet-forcedwidth {
+	width:100%;
 }
 
 .sheet-expandedsheet .sheet-customroll {
@@ -1365,14 +1455,29 @@ input[type=number] {
 	margin-bottom: 15px;
 }
 
+.sheet-2colholder {
+	text-align: center;
+}
+
+.sheet-fullcolumn {
+	display: inline-block;
+	margin-left: 2%;
+	margin-right: 2%;
+	width: 96%;
+}
+
 .sheet-leftcolumn {
+
 	display: inline-block;   
-	margin-right: 10px;
+	width: 48%;
+	margin-right: 2%;
 }
 
 .sheet-rightcolumn {
 	display: inline-block;
 	float: right;
+	width: 48%;
+	margin-left: 2%;
 }
 
 td.sheet-vitae {
