Changed Fonts & Expanded Merits
Made ALL Expanded Merits customizable (no more default merit fields)

--- a/Custom VtR-2E.css
+++ b/Custom VtR-2E.css
@@ -1433,6 +1433,17 @@ input[type=number] {
 	margin-bottom: 15px;
 }
 
+.sheet-seriftextfield textarea {
+    font-family: "Times New Roman", Serif;
+	font-size: 12px;
+}
+
+.sheet-sansseriftextfield textarea,
+.sheet-sansseriftextfield input[type="text"] {
+    font-family: "Helvetica Narrow", "Arial Narrow", Arial;
+	font-size: 11px;
+}
+
 .sheet-2colholder {
 	text-align: center;
 }
