--- a/Custom VtR-2E.css
+++ b/Custom VtR-2E.css
@@ -5,10 +5,7 @@
 .sheet-background {
 	background: none;
 	position: relative;
-	padding-top: 18px;
-	padding-left: 90px;
-	padding-right: 80px;
-	padding-bottom: 80px;
+    padding: 18px 80px 80px 90px;
 	width: 905px;
 }
 
@@ -26,6 +23,9 @@
 .sheet-geist,
 .sheet-changeling,
 .sheet-mummy,
+.sheet-demon,
+.sheet-beast,
+.sheet-hunter,
 .sheet-settings {
 	display: none !important;
 }
@@ -38,6 +38,9 @@ input.sheet-prometheansheet:checked ~ div * .sheet-promethean,
 input.sheet-changelingsheet:checked ~ div * .sheet-changeling,
 input.sheet-geistsheet:checked ~ div * .sheet-geist,
 input.sheet-mummysheet:checked ~ div * .sheet-mummy,
+input.sheet-demonsheet:checked ~ div * .sheet-demon,
+input.sheet-beastsheet:checked ~ div * .sheet-beast,
+input.sheet-huntersheet:checked ~ div * .sheet-hunter,
 input.sheet-settingssheet:checked ~ div * .sheet-settings {
 	display: inline-block !important;
 }
@@ -50,11 +53,15 @@ input.sheet-prometheansheet:checked ~ div * table.sheet-promethean,
 input.sheet-changelingsheet:checked ~ div * table.sheet-changeling,
 input.sheet-geistsheet:checked ~ div * table.sheet-geist,
 input.sheet-mummysheet:checked ~ div * table.sheet-mummy,
+input.sheet-demonsheet:checked ~ div * table.sheet-demon,
+input.sheet-beastsheet:checked ~ div * table.sheet-beast,
+input.sheet-huntersheet:checked ~ div * table.sheet-hunter,
 input.sheet-settingssheet:checked ~ div * table.sheet-settings {
 	display: table !important;
 }
 
 input.sheet-settingssheet:checked ~ div.sheet-3colrow,
+input.sheet-settingssheet:checked ~ div.sheet-diceroller,
 input.sheet-settingssheet:checked ~ div.sheet-skills,
 input.sheet-settingssheet:checked ~ div.sheet-othertraits,
 input.sheet-settingssheet:checked ~ div.sheet-expandedsheet,
@@ -65,12 +72,15 @@ input.sheet-2nd:checked ~ div * .sheet-1st,
 input.sheet-pages:checked ~ .sheet-gametype,
 input.sheet-pages:checked ~ input.sheet-gametype + span,
 input.sheet-page2:checked ~ div.sheet-3colrow,
+input.sheet-page2:checked ~ div.sheet-diceroller,
 input.sheet-page2:checked ~ div.sheet-skills,
 input.sheet-page2:checked ~ div.sheet-othertraits,
 input.sheet-page3:checked ~ div.sheet-3colrow,
+input.sheet-page3:checked ~ div.sheet-diceroller,
 input.sheet-page3:checked ~ div.sheet-skills,
 input.sheet-page3:checked ~ div.sheet-othertraits,
 input.sheet-page4:checked ~ div.sheet-3colrow,
+input.sheet-page4:checked ~ div.sheet-diceroller
 input.sheet-page4:checked ~ div.sheet-skills,
 input.sheet-page4:checked ~ div.sheet-othertraits{
 	display: none !important;
@@ -96,6 +106,12 @@ span.sheet-edition {
 	font-weight: bold;   
 }
 
+/* hide othertrait dots on changeling 2nd sheets (2e contracts don't have dots) */
+input.sheet-changelingsheet.sheet-2nd:checked ~ div * td.sheet-changeling.sheet-2nd ~ td.sheet-normal,
+input.sheet-changelingsheet.sheet-2nd:checked ~ div * tr.sheet-changeling.sheet-2nd ~ tr.sheet-normal {
+    display: none;
+}
+
 /* BACKGROUND IMAGE */
 .sheet-background-image::after {
 	content: "";
@@ -115,33 +131,33 @@ input.sheet-sheetoptions + span.sheet-attr {
 }
 
 input.sheet-mortalsheet:checked ~ .sheet-background-image::after {
-	background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/IYYhFQo.jpg');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/chronicles-bg.jpg');
 	background-size: 100% 100%;
 	opacity: 0.2
 }
 
 input.sheet-vampiresheet:checked ~ .sheet-background-image::after {
-	background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/18vqolD.jpg');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/vampire-bg.jpg');
 	background-size: 100% 100%;
 }
 
 input.sheet-werewolfsheet:checked ~ .sheet-background-image::after {
-	background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/jxHfu9f.png');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/werewolf-bg.png');
 	background-size: 100% 100%;
 }
 
 input.sheet-magesheet:checked ~ .sheet-background-image::after {
-	background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/78XyEEZg.png');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/mage-bg.png');
 	background-size: 100% 100%;
 }
 
 input.sheet-prometheansheet:checked ~ .sheet-background-image::after {
-	background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/KR9EuG6g.png');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/promethean-bg.png');
 	background-size: 100% 100%;
 }
 
 input.sheet-changelingsheet:checked ~ .sheet-background-image::after {
-	background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/8FIG4h1g.png');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/changeling-bg.png');
 	background-size: 100% 100%;
 }
 
@@ -151,7 +167,22 @@ input.sheet-geistsheet:checked ~ .sheet-background-image::after {
 }
 
 input.sheet-mummysheet:checked ~ .sheet-background-image::after {
-	background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/FBU0fWhg.jpg');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/mummy-bg.jpg');
+    background-size: 100% 100%;
+}
+
+input.sheet-demonsheet:checked ~ .sheet-background-image::after {
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/demon-bg.png');
+    background-size: 100% 100%;
+}
+
+input.sheet-beastsheet:checked ~ .sheet-background-image::after {
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/beast-bg.png');
+    background-size: 100% 100%;
+}
+
+input.sheet-huntersheet:checked ~ .sheet-background-image::after {
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/hunter-bg.png');
 	background-size: 100% 100%;
 }
 
@@ -170,7 +201,9 @@ input.sheet-settingssheet:not(:checked) ~ input.sheet-magesheet:checked ~ img.sh
 input.sheet-settingssheet:not(:checked) ~ input.sheet-prometheansheet:checked ~ img.sheet-header.sheet-promethean,
 input.sheet-settingssheet:not(:checked) ~ input.sheet-changelingsheet:checked ~ img.sheet-header.sheet-changeling,
 input.sheet-settingssheet:not(:checked) ~ input.sheet-geistsheet:checked ~ img.sheet-header.sheet-geist,
-input.sheet-settingssheet:not(:checked) ~ input.sheet-mummysheet:checked ~ img.sheet-header.sheet-mummy
+input.sheet-settingssheet:not(:checked) ~ input.sheet-mummysheet:checked ~ img.sheet-header.sheet-mummy,
+input.sheet-settingssheet:not(:checked) ~ input.sheet-demonsheet:checked ~ img.sheet-header.sheet-demon,
+input.sheet-settingssheet:not(:checked) ~ input.sheet-huntersheet:checked ~ img.sheet-header.sheet-hunter
 {
 	height: 150px;
 	display: inline !important;
@@ -179,6 +212,11 @@ input.sheet-settingssheet:not(:checked) ~ input.sheet-mummysheet:checked ~ img.s
 	left: 0;
 	right: 0;
 	margin: auto;
+}
+
+input.sheet-settingssheet:not(:checked) ~ input.sheet-huntersheet:checked ~ img.sheet-header.sheet-hunter {
+    top: 50px;
+    height: 120px;
 }
 
 input.sheet-settingssheet:checked ~ div.sheet-header.sheet-settings {
@@ -317,6 +355,45 @@ input.sheet-mummysheet:checked ~ div * input.sheet-weapon:checked + span + .shee
 	font-weight: bold;
 }
 
+input.sheet-demonsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-demonsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
+input.sheet-sheetoptions.sheet-demonsheet:checked +span.sheet-attr {
+    color: #2A2D80;
+    text-shadow: 0px 0px 10px black;
+}
+
+input.sheet-demonsheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
+    color: #2A2D80;
+    text-shadow: 0px 0px 10px black;
+    font-weight: bold;
+}
+
+input.sheet-beastsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-beastsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
+input.sheet-sheetoptions.sheet-beastsheet:checked +span.sheet-attr {
+    color: #2A2D80;
+    text-shadow: 0px 0px 10px black;
+}
+
+input.sheet-beastsheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
+    color: #2A2D80;
+    text-shadow: 0px 0px 10px black;
+    font-weight: bold;
+}
+
+input.sheet-huntersheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-huntersheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
+input.sheet-sheetoptions.sheet-huntersheet:checked +span.sheet-attr {
+    color: #2A2D80;
+    text-shadow: 0px 0px 10px black;
+}
+
+input.sheet-huntersheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
+    color: #2A2D80;
+    text-shadow: 0px 0px 10px black;
+    font-weight: bold;
+}
+
 .sheet-expandedsheet,
 .sheet-expandedsheet2,
 .sheet-expandedsheet3,
@@ -357,7 +434,7 @@ input.sheet-mummysheet:checked ~ div * input.sheet-weapon:checked + span + .shee
 }
 
 .charsheet .sheet-diceroller .sheet-rollcontainer {
-	background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/lrcLjVQ.png') no-repeat center;
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/die.png') no-repeat center;
 	background-size: contain;
 	border-bottom: solid 1px #000000;
 }
@@ -862,13 +939,13 @@ input.sheet-CorC2:checked ~ h4.sheet-CorC2
 .sheet-rolltemplate-wod table,
 .sheet-rolltemplate-wod-attack table,
 .sheet-rolltemplate-wod-simple table,
-.sheet-rolltemplate-wod-3part table
+.sheet-rolltemplate-wod-3part table,
+.sheet-rolltemplate-wod-initiative table
 {
 	width: 189px;
 	height: 100%;
-	background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/xBk4U1p.jpg) top left;
+    background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/roll.jpg) no-repeat top left;
 	background-size: 189px 100%;
-	background-repeat: no-repeat;
 	font-family: "Courier New", Courier, monospace;
 	font-weight: bold;
 	border-spacing: 0;
@@ -877,7 +954,8 @@ input.sheet-CorC2:checked ~ h4.sheet-CorC2
 .sheet-rolltemplate-wod th,
 .sheet-rolltemplate-wod-attack th,
 .sheet-rolltemplate-wod-simple th,
-.sheet-rolltemplate-wod-3part th 
+.sheet-rolltemplate-wod-3part th,
+.sheet-rolltemplate-wod-initiative th
 {
 	color: rgb(112, 0, 0);
 	padding: 20px 20px 2px 20px;
@@ -890,7 +968,8 @@ input.sheet-CorC2:checked ~ h4.sheet-CorC2
 .sheet-rolltemplate-wod td,
 .sheet-rolltemplate-wod-attack td,
 .sheet-rolltemplate-wod-simple td,
-.sheet-rolltemplate-wod-3part td 
+.sheet-rolltemplate-wod-3part td ,
+.sheet-rolltemplate-wod-initiative td
 {
 	padding: 2px 20px 2px 20px;
 	font-size: 1.0em;
@@ -900,7 +979,8 @@ input.sheet-CorC2:checked ~ h4.sheet-CorC2
 .sheet-rolltemplate-wod .sheet-result,
 .sheet-rolltemplate-wod-attack .sheet-result,
 .sheet-rolltemplate-wod-simple .sheet-result,
-.sheet-rolltemplate-wod-3part .sheet-result 
+.sheet-rolltemplate-wod-3part .sheet-result ,
+.sheet-rolltemplate-wod-initiative .sheet-result
 {
 	font-size: 1.2em;
 	text-align: center;
@@ -912,7 +992,8 @@ input.sheet-CorC2:checked ~ h4.sheet-CorC2
 .sheet-rolltemplate-wod .inlinerollresult,
 .sheet-rolltemplate-wod-attack .sheet-result .inlinerollresult,
 .sheet-rolltemplate-wod-simple .inlinerollresult,
-.sheet-rolltemplate-wod-3part .inlinerollresult
+.sheet-rolltemplate-wod-3part .inlinerollresult,
+.sheet-rolltemplate-wod-initiative .inlinerollresult
 {
 	background-color: transparent;
 	color: #000000;
@@ -931,7 +1012,8 @@ input.sheet-CorC2:checked ~ h4.sheet-CorC2
 .sheet-rolltemplate-wod .inlinerollresult.fullcrit,
 .sheet-rolltemplate-wod-attack .sheet-result .inlinerollresult.fullcrit,
 .sheet-rolltemplate-wod-simple .inlinerollresult.fullcrit,
-.sheet-rolltemplate-wod-3part .inlinerollresult.fullcrit
+.sheet-rolltemplate-wod-3part .inlinerollresult.fullcrit,
+.sheet-rolltemplate-wod-initiative .inlinerollresult.fullcrit
 {
 	color: #000000;
 	border: none;
@@ -940,7 +1022,8 @@ input.sheet-CorC2:checked ~ h4.sheet-CorC2
 .sheet-rolltemplate-wod .inlinerollresult.fullfail,
 .sheet-rolltemplate-wod-attack .sheet-result .inlinerollresult.fullfail,
 .sheet-rolltemplate-wod-simple .inlinerollresult.fullfail,
-.sheet-rolltemplate-wod-3part .inlinerollresult.fullfail
+.sheet-rolltemplate-wod-3part .inlinerollresult.fullfail,
+.sheet-rolltemplate-wod-initiative .inlinerollresult.fullfail
 {
 	color: #000000;
 	border: none;
@@ -949,7 +1032,8 @@ input.sheet-CorC2:checked ~ h4.sheet-CorC2
 .sheet-rolltemplate-wod .inlinerollresult.importantroll,
 .sheet-rolltemplate-wod-attack .inlinerollresult.importantroll,
 .sheet-rolltemplate-wod-simple .inlinerollresult.importantroll,
-.sheet-rolltemplate-wod-3part .inlinerollresult.importantroll
+.sheet-rolltemplate-wod-3part .inlinerollresult.importantroll,
+.sheet-rolltemplate-wod-initiative .inlinerollresult.importantroll
 {
 	color: #000000;
 	border: none;
@@ -958,7 +1042,9 @@ input.sheet-CorC2:checked ~ h4.sheet-CorC2
 .sheet-rolltemplate-wod .sheet-specialrollflag,
 .sheet-rolltemplate-wod-attack .sheet-specialrollflag,
 .sheet-rolltemplate-wod-simple .sheet-specialrollflag,
-.sheet-rolltemplate-wod-3part .sheet-specialrollflag {
+.sheet-rolltemplate-wod-3part .sheet-specialrollflag ,
+.sheet-rolltemplate-wod-initiative .sheet-specialrollflag
+{
 	color: #000000;
 	height: 30px;
 	text-align: right;
@@ -1155,10 +1241,11 @@ input.sheet-aggravateddot:checked ~ span.sheet-aggravateddot {
 {
 	position: absolute;
 	top: 17px;
-	left: -45px;
+    left: -50px;
 	width: 50px;
 	height: 10px;
 	font-size: 10px;
+    text-align: right;
 }
 
 .sheet-variablecontainer .sheet-healthboxcontainer input[type="checkbox"] + span {
@@ -1314,7 +1401,8 @@ input[type=number] {
 
 .sheet-weapontable select,
 .sheet-settings select, 
-.sheet-expandedsheet select {
+.sheet-expandedsheet select,
+.sheet-othertrait select{
 	width: 47px;
 	height: 14px;
 	padding: 0px;
@@ -1382,7 +1470,7 @@ input[type=number] {
 }
 
 .sheet-expandedsheet .sheet-rollcontainer {
-	background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/lrcLjVQ.png') no-repeat center;
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/die.png') no-repeat center;
 	background-size: contain;
 	height: 40px;
 	width: 40px;
@@ -1400,6 +1488,29 @@ input[type=number] {
 	height: 100%;
 	width: 100%;
 	opacity: 0;
+}
+
+.charsheet .sheet-diceroller table td.sheet-initiative {
+    border-bottom: solid 1px #000000;
+    text-align: center;
+}
+
+.charsheet .sheet-diceroller table td.sheet-initiative button:before {
+    content: "" !important;
+}
+
+.charsheet .sheet-diceroller table td.sheet-initiative button {
+    color: #2A2D80;
+    text-shadow: 0px 0px 10px black;
+    font-weight: bold;
+    height: auto;
+    width: auto;
+    opacity: 100;
+    cursor: pointer;
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 0;
 }
 
 .sheet-expandedsheet textarea,
@@ -1518,4 +1629,8 @@ input[type="text"].sheet-title {
 	width: 300px;
 	font-size: 1.4em;
 	font-weight: bolder;
+}
+/* PRD-1407 */
+.charsheet .repcontainer.editmode .repitem .itemcontrol {
+    z-index: 100;
 }
