--- a/Custom VtR-2E.css
+++ b/Custom VtR-2E.css
@@ -131,58 +131,58 @@ input.sheet-sheetoptions + span.sheet-attr {
 }
 
 input.sheet-mortalsheet:checked ~ .sheet-background-image::after {
-    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/chronicles-bg.jpg');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/chronicles-bg.jpg');
 	background-size: 100% 100%;
 	opacity: 0.2
 }
 
 input.sheet-vampiresheet:checked ~ .sheet-background-image::after {
-    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/vampire-bg.jpg');
-	background-size: 100% 100%;
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/vampire-bg.jpg');
+    background-size: 100% 105%;
 }
 
 input.sheet-werewolfsheet:checked ~ .sheet-background-image::after {
-    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/werewolf-bg.png');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/werewolf-bg.png');
 	background-size: 100% 100%;
 }
 
 input.sheet-magesheet:checked ~ .sheet-background-image::after {
-    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/mage-bg.png');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/mage-bg.png');
 	background-size: 100% 100%;
 }
 
 input.sheet-prometheansheet:checked ~ .sheet-background-image::after {
-    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/promethean-bg.png');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/promethean-bg.png');
 	background-size: 100% 100%;
 }
 
 input.sheet-changelingsheet:checked ~ .sheet-background-image::after {
-    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/changeling-bg.png');
-	background-size: 100% 100%;
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/changeling-bg.png');
+    background-size: 100% 102%;
 }
 
 input.sheet-geistsheet:checked ~ .sheet-background-image::after {
-	background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/deemlbag.png');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/deemlbag.png');
 	background-size: 100% 100%;
 }
 
 input.sheet-mummysheet:checked ~ .sheet-background-image::after {
-    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/mummy-bg.jpg');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/mummy-bg.jpg');
     background-size: 100% 100%;
 }
 
 input.sheet-demonsheet:checked ~ .sheet-background-image::after {
-    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/demon-bg.png');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/demon-bg.png');
     background-size: 100% 100%;
 }
 
 input.sheet-beastsheet:checked ~ .sheet-background-image::after {
-    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/beast-bg.png');
-    background-size: 100% 100%;
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/beast-bg.png');
+    background-size: 100% 101%;
 }
 
 input.sheet-huntersheet:checked ~ .sheet-background-image::after {
-    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/hunter-bg.png');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/hunter-bg.png');
 	background-size: 100% 100%;
 }
 
@@ -944,7 +944,7 @@ input.sheet-CorC2:checked ~ h4.sheet-CorC2
 {
 	width: 189px;
 	height: 100%;
-    background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/roll.jpg) no-repeat top left;
+    background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/roll.jpg) no-repeat top left;
 	background-size: 189px 100%;
 	font-family: "Courier New", Courier, monospace;
 	font-weight: bold;
@@ -1470,7 +1470,7 @@ input[type=number] {
 }
 
 .sheet-expandedsheet .sheet-rollcontainer {
-    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/New%20World%20of%20Darkness%20Official/die.png') no-repeat center;
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/die.png') no-repeat center;
 	background-size: contain;
 	height: 40px;
 	width: 40px;
